--- a/cava/.config/cava/config
+++ b/cava/.config/cava/config
@@ -205,18 +205,18 @@ mono_option = average
 ; disable_blanking = 0
 
 [color]
-background = '#eff1f5'
+background = '#1e1e2e'
 
 gradient = 1
 
-gradient_color_1 = '#179299'
-gradient_color_2 = '#04a5e5'
-gradient_color_3 = '#209fb5'
-gradient_color_4 = '#1e66f5'
-gradient_color_5 = '#8839ef'
-gradient_color_6 = '#ea76cb'
-gradient_color_7 = '#e64553'
-gradient_color_8 = '#d20f39'
+gradient_color_1 = '#94E2D5'
+gradient_color_2 = '#89dceb'
+gradient_color_3 = '#74c7ec'
+gradient_color_4 = '#89b4fa'
+gradient_color_5 = '#cba6f7'
+gradient_color_6 = '#f5c2e7'
+gradient_color_7 = '#eba0ac'
+gradient_color_8 = '#f38ba8'
 
 
 
