--- a/sioyek/.config/sioyek/prefs_user.config
+++ b/sioyek/.config/sioyek/prefs_user.config
@@ -1,28 +1,28 @@
 startup_commands toggle_custom_color;toggle_statusbar
 
 # === CATPPUCCIN MOCHA === #
-background_color           #eff1f5
+background_color           #1e1e2e
 
-text_highlight_color       #df8e1d
-visual_mark_color          #8c8fa1
+text_highlight_color       #f9e2af
+visual_mark_color          #7f849c
 
-search_highlight_color     #df8e1d
-link_highlight_color       #1e66f5
-synctex_highlight_color    #40a02b
+search_highlight_color     #f9e2af
+link_highlight_color       #89b4fa
+synctex_highlight_color    #a6e3a1
 
-highlight_color_a          #df8e1d
-highlight_color_b          #40a02b
-highlight_color_c          #04a5e5
-highlight_color_d          #e64553
-highlight_color_e          #8839ef
-highlight_color_f          #d20f39
-highlight_color_g          #df8e1d
+highlight_color_a          #f9e2af
+highlight_color_b          #a6e3a1
+highlight_color_c          #89dceb
+highlight_color_d          #eba0ac
+highlight_color_e          #cba6f7
+highlight_color_f          #f38ba8
+highlight_color_g          #f9e2af
 
 
-custom_background_color    #eff1f5
-custom_text_color          #4c4f69
+custom_background_color    #1e1e2e
+custom_text_color          #cdd6f4
 
-ui_text_color              #4c4f69
-ui_background_color        #CCD0DA
-ui_selected_text_color     #4c4f69
-ui_selected_background_color #acb0be
+ui_text_color              #cdd6f4
+ui_background_color        #313244
+ui_selected_text_color     #cdd6f4
+ui_selected_background_color #585b70
