--- a/spicetify/.config/spicetify/config-xpui.ini
+++ b/spicetify/.config/spicetify/config-xpui.ini
@@ -2,7 +2,7 @@
 overwrite_assets        = 1
 spotify_launch_flags    = 
 current_theme           = catppuccin
-color_scheme            = latte
+color_scheme            = mocha
 inject_css              = 1
 replace_colors          = 1
 spotify_path            = /Applications/Spotify.app/Contents/Resources
@@ -30,5 +30,5 @@ experimental_features = 1
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.36.959.g04bf500c
-with    = 2.36.10
+version = 1.2.41.434.g39a25e2c
+with    = 2.36.15
