--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,26 +4,25 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'pschmitt/tmux-ssh-split'
 
-set -g @catppuccin_flavour "latte"
-set -g @catppuccin_status_default "off" # defaults to "on"
+set -g @catppuccin_flavour "mocha"
+set -g @catppuccin_status_default "on" # defaults to "on"
 
-set -g @catppuccin_window_right_separator "  "
-set -g @catppuccin_window_left_separator "  "
+set -g @catppuccin_window_left_separator "█"
+set -g @catppuccin_window_right_separator "█ "
 set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_middle_separator " | "
+set -g @catppuccin_window_middle_separator "  █"
 
-set -g @catppuccin_window_default_fill "none"
+set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_default_text "#W"
 
-set -g @catppuccin_window_current_fill "none"
+set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W"
 
-set -g @catppuccin_status_modules_right " "
-
-set -g @catppuccin_pane_border_style "fg=white" 
-set -g @catppuccin_pane_active_border_style "fg=white"
-
-set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g @catppuccin_status_modules_right "session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
 
 set-option -g @ssh-split-h-key "h"
 set-option -g @ssh-split-v-key "v"
@@ -50,6 +49,9 @@ unbind %
 
 unbind '"'
 
+bind-key q confirm-before -p "kill-window #W? (y/n)" kill-window
+bind-key n new-window
+bind-key r command-prompt -I "#W" { rename-window "%%" }
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -71,7 +73,9 @@ bind-key -T copy-mode-vi 'C-Right' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
 
-set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
+set -g default-terminal 'tmux-256color' 
+set -as terminal-features ",xterm-256color:RGB"
+set -ga terminal-overrides ',*:Tc' 
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q' 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
